fix spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11833,23 +11833,33 @@ body {
   color: black;
 }
 
+#sponsor #payment-form #dropin-container {
+  max-width: 1030px;
+  margin: auto;
+}
+
 #sponsor #payment-form #paga {
   background-color: #ff5a5f;
   border: none;
   border-radius: 5px;
   padding: 10px;
   color: white;
-  margin-bottom: 12px;
+  margin-top: 17px;
+  margin-bottom: 30px;
   text-transform: uppercase;
   font-weight: bold;
 }
 
-#sponsor .container #payment-form h3 {
+#sponsor .container #payment-form {
+  margin-top: 60px;
+}
+
+#sponsor .container #payment-form h1 {
   text-align: center;
   margin-top: 30px;
 }
 
-#sponsor .container #payment-form p {
+#sponsor .container #payment-form h4 {
   margin: 10px 0 30px 0;
   text-align: center;
   font-size: 1.2em;
@@ -11859,12 +11869,23 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 30px 0;
+  margin: 60px 0;
 }
 
 #sponsor .container .card {
   border-radius: 10px;
   border-color: transparent;
+}
+
+#sponsor .container .card .card-title {
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+#sponsor .container .card .card-text {
+  margin: 10px 0 30px 0;
+  text-align: center;
+  font-size: 1.2em;
 }
 
 #sponsor .container .center-card {
